# md-docs

./: .pre-commit-config.yaml  README.md  input.md  main.py  output.md  pyproject.toml  sample_main.py
.github/: copilot-instructions.md
docs/: 01_要件定義書.md  02_外部設計仕様書.md  03_内部設計仕様書.md
docs/specs/: SPEC.md
src/adapters/: file_storage.py  markdown_adapter.py  markdown_parser.py  markdown_renderer.py
src/domain/: doc_convertible.py  doc_cursor.py  doc_ir.py  document_inspector.py  ir_serializers.py  markdown_parser.py  markdown_renderer.py
src/interfaces/: protocols.py
src/mddocs/: __init__.py
src/mddocs/adapters/: file_storage.py  markdown_adapter.py  markdown_parser.py  markdown_renderer.py
src/mddocs/api/: __init__.py  nodes.py
src/mddocs/domain/: doc_convertible.py  doc_cursor.py  doc_ir.py  document_inspector.py  ir_serializers.py
src/mddocs/interfaces/: protocols.py
src/mddocs/usecase/: convert_usecase.py
src/usecase/: convert_usecase.py  document_usecases.py  eval_item.py
tests/: README.md  conftest.py  test_doc_cursor.py  test_document_usecases.py  test_domain_docparser.py  test_evalitem_errors.py  test_table_as_dict.py
tests/spec/: test_spec_api_contracts.py  test_spec_fm_001_nodes_table.py  test_spec_fm_002_front_matter_propagation.py  test_spec_parser_001_renderer_001_storage_001.py  test_spec_render_002_mdformat_single_call.py  test_spec_table_001_002_header_row_consistency.py
tests/spec_tests/: test_front_matter_propagation.py  test_renderer_mdformat_single_call.py  test_spec_api_contracts.py  test_spec_frontmatter_nodes_table.py  test_spec_parser_renderer_storage_usecase.py  test_table_header_row_consistency.py
tests/unit/: test_convert_usecase_save_front_matter.py  test_markdown_parser_errors.py  test_node_cursor_operations.py  test_table_as_dict_edges.py
