
[project]
name = "md-docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mypy>=1.19.1",
    "ruff>=0.14.10",
    "mdformat>=0.7.17",
    "pytest>=9.0.2",
    "pre-commit>=4.5.1",
]

[project.optional-dependencies]
dev = [
    "import-linter>=2.9",
]

[tool.importlinter]
# Projects root packages for import-linter
root_packages = ["src"]

# Contracts enforcing Clean Architecture layer boundaries

[[tool.importlinter.contracts]]
name = "domain_no_adapters"
type = "forbidden"
source_modules = ["src.domain"]
forbidden_modules = ["src.adapters"]

[[tool.importlinter.contracts]]
name = "domain_no_usecase"
type = "forbidden"
source_modules = ["src.domain"]
forbidden_modules = ["src.usecase"]

[[tool.importlinter.contracts]]
name = "domain_no_interfaces"
type = "forbidden"
source_modules = ["src.domain"]
forbidden_modules = ["src.interfaces"]

[[tool.importlinter.contracts]]
name = "usecase_no_adapters"
type = "forbidden"
source_modules = ["src.usecase"]
forbidden_modules = ["src.adapters"]

[[tool.importlinter.contracts]]
name = "interfaces_no_adapters"
type = "forbidden"
source_modules = ["src.interfaces"]
forbidden_modules = ["src.adapters"]
