[project]
name = "md-docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mypy>=1.19.1",
    "ruff>=0.14.10",
    "mdformat>=0.7.17",
    "pytest>=9.0.2",
    "pre-commit>=4.5.1",
]

[project.optional-dependencies]
dev = [
    "import-linter>=2.9",
]

# -------------------------------------------------
# import-linter configuration
# -------------------------------------------------

[tool.importlinter]
# Python import roots (src is on PYTHONPATH, but not an import name)
root_packages = ["domain", "adapters", "usecase", "interfaces"]

# Domain must be pure
[[tool.importlinter.contracts]]
name = "domain_no_adapters"
type = "forbidden"
source_modules = ["domain"]
forbidden_modules = ["adapters"]

[[tool.importlinter.contracts]]
name = "domain_no_usecase"
type = "forbidden"
source_modules = ["domain"]
forbidden_modules = ["usecase"]

[[tool.importlinter.contracts]]
name = "domain_no_interfaces"
type = "forbidden"
source_modules = ["domain"]
forbidden_modules = ["interfaces"]

# Usecase depends only on domain + interfaces
[[tool.importlinter.contracts]]
name = "usecase_no_adapters"
type = "forbidden"
source_modules = ["usecase"]
forbidden_modules = ["adapters"]

# Interfaces must not depend on adapters
[[tool.importlinter.contracts]]
name = "interfaces_no_adapters"
type = "forbidden"
source_modules = ["interfaces"]
forbidden_modules = ["adapters"]

# -------------------------------------------------
# pytest configuration
# -------------------------------------------------

[tool.pytest.ini_options]
# src is added to PYTHONPATH so that:
#   domain, adapters, usecase, interfaces
# are importable as top-level packages
pythonpath = ["src"]

# -------------------------------------------------
# mypy configuration (optional but explicit)
# -------------------------------------------------

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
