[project]
name = "md-docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mdformat>=0.7.17",
]

[project.optional-dependencies]
dev = [
    "import-linter>=2.9",
    "mypy>=1.19.1",
    "ruff>=0.14.10",
    "pytest>=9.0.2",
    "pre-commit>=4.5.1",
]

# -------------------------------------------------
# import-linter configuration
# -------------------------------------------------

[tool.importlinter]
# Python import root: package installed by the build is `mddocs`.
# Use the installed package name as the root so import-linter runs in
# the same import layout as consumers (and pre-commit builds the wheel).
root_packages = ["mddocs"]

# Domain must be pure
[[tool.importlinter.contracts]]
name = "domain_no_adapters"
type = "forbidden"
source_modules = ["mddocs.domain"]
forbidden_modules = ["mddocs.adapters"]

[[tool.importlinter.contracts]]
name = "domain_no_usecase"
type = "forbidden"
source_modules = ["mddocs.domain"]
forbidden_modules = ["mddocs.usecase"]

[[tool.importlinter.contracts]]
name = "domain_no_interfaces"
type = "forbidden"
source_modules = ["mddocs.domain"]
forbidden_modules = ["mddocs.interfaces"]

# Usecase depends only on domain + interfaces
[[tool.importlinter.contracts]]
name = "usecase_no_adapters"
type = "forbidden"
source_modules = ["mddocs.usecase"]
forbidden_modules = ["mddocs.adapters"]

# Interfaces must not depend on adapters
[[tool.importlinter.contracts]]
name = "interfaces_no_adapters"
type = "forbidden"
source_modules = ["mddocs.interfaces"]
forbidden_modules = ["mddocs.adapters"]

# -------------------------------------------------
# pytest configuration
# -------------------------------------------------

[tool.pytest.ini_options]
# src is added to PYTHONPATH so that:
#   domain, adapters, usecase, interfaces
# are importable as top-level packages
pythonpath = ["src", "src/mddocs"]

# -------------------------------------------------
# mypy configuration (optional but explicit)
# -------------------------------------------------

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true

# Build / packaging configuration so `mddocs` under `src/` is included
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["mddocs*"]
